	* Fix add/subtract value functionality in Matrix (BUG 493523)
	* Fix wrong font size in the plot legend (BUG 493017) and in the axis title (BUG 472982)
	* Don't overwrite OPJ files when saving (BUG 496480)
	* Fixed the text cursor jumping to the beginning of the line when typing in text in the note (BUG 497029)
	* Fix accuracy of spin boxes(BUG 496804)

Internal:
	* use name LabPlot/labplot consistenly (renamed LabPlot2/labplot2)
	* switch to Qt6 only
	* make QtSvg optional


-----2.11.1 (16.07.2024) -----
Bug fixes:
	* Improve ODS support (selected platforms only)
	* Fixed the initial positioninig of the docks, should be put besides each other and not below
	* Don't try to restore the window size when starting for the first time, let the window manager do the initial size
	* Don't crash when opening a project which a hidden spreadsheet view
	* Fixed the background color of the sparklines in the spreadsheet
	* Fixed copy&paste and duplication of the matrix


-----2.11.0 (09.07.2024) -----
New features:
	* [general]
		* New application theme "Dracula"
		* New categorical color map "Dracula"
		* New option in the application settings to run a selected CAS engine at startup
		* New option in the application settings to control if the state of the dock widgets should be saved in the project file
		* Share the project via email, Nextcloud, etc. directly from the main menu
		* Allow to activate and deactivate the debug and performance tracing output in the terminal in the application settings
	* [worksheet]
		* Preview panel for all available worksheets in the project
		* Add possibility to use column labels as axis ticks
		* New visualization types:
			* Lollipop plot
			* Q-Q plot
			* KDE plot
		* Error bars for bar plots
		* New worksheet theme "Dracula"
		* Add possibility to lock elements for unintentional change in the plot
		* New panel in the presenter widget to allow the selection, zooming and navigation also in the presenter mode