@@ -295,9 +295,14 @@ void BarPlot::setDataColumns(const QVector<const AbstractColumn*> columns) {
 	if (columns != d->dataColumns) {
 		exec(new BarPlotSetDataColumnsCmd(d, columns, ki18n("%1: set data columns")));
 
+		d->dataColumnPaths.clear(); // TODO: make undo/redo-able!!!
 		for (auto* column : columns) {
-			if (!column)
+			if (!column) {
+				d->dataColumnPaths << QString();
 				continue;
+			}
+
+			d->dataColumnPaths << column->path();
 
 			// update the curve itself on changes
 			connect(column, &AbstractColumn::dataChanged, this, &BarPlot::recalc);
@@ -1401,15 +1406,8 @@ void BarPlot::save(QXmlStreamWriter* writer) const {
 	writer->writeAttribute(QStringLiteral("yMax"), QString::number(d->yMax));
 	writer->writeAttribute(QStringLiteral("visible"), QString::number(d->isVisible()));
 	writer->writeAttribute(QStringLiteral("legendVisible"), QString::number(d->legendVisible));
-
-	if (d->xColumn)
-		writer->writeAttribute(QStringLiteral("xColumn"), d->xColumn->path());
-
-	for (auto* column : d->dataColumns) {
-		writer->writeStartElement(QStringLiteral("column"));
-		writer->writeAttribute(QStringLiteral("path"), column->path());
-		writer->writeEndElement();
-	}
+	WRITE_COLUMN(d->xColumn, xColumn);
+	WRITE_COLUMNS(d->dataColumns, d->dataColumnPaths);
 	writer->writeEndElement();
 
 	// box filling
