@@ -48,6 +48,7 @@ Bug fixes:
 	* Don't overwrite OPJ files when saving (BUG 496480)
 	* Fixed the text cursor jumping to the beginning of the line when typing in text in the note (BUG 497029)
 	* Fix accuracy of spin boxes(BUG 496804)
+	* Don't crash when saving plots having multiple data source columns (box plot, etc.) after one of the columns was deleted (BUG 497712)
 
 Internal:
 	* use name LabPlot/labplot consistenly (renamed LabPlot2/labplot2)
